# lfz

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  output.rs  paths.rs
src/cli/: build.rs  clean.rs  list.rs  mod.rs  purge.rs  size.rs  update.rs
src/config/: build_yaml.rs  mod.rs  project.rs  west_yml.rs
src/container/: command.rs  mod.rs
src/workspace/: hash_tracker.rs  manager.rs  mod.rs
