[package]
name = "lfz"
version = "0.1.0"
edition = "2021"
description = "Local First ZMK - Build ZMK firmware locally with ease"
license = "MIT"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "1"

# Paths and directories
directories = "5"

# Hashing (for cache keys)
sha2 = "0.10"
hex = "0.4"

# Parallel execution
rayon = "1.10"

# For global state in output
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"
