[package]
name = "lfz"
version = "0.1.7"
edition = "2021"
description = "Local First ZMK - Build ZMK firmware locally with ease"
license = "MIT"
readme = "README.md"
repository = "https://github.com/schmidtw/lfz"
homepage = "https://github.com/schmidtw/lfz"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Paths and directories
directories = "6"
dirs = "6"

# Hashing (for cache keys)
sha2 = "0.10"
hex = "0.4"

# Parallel execution
rayon = "1.10"

# For global state in output
lazy_static = "1.4"

# Terminal UI
indicatif = "0.18"
console = "0.16"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# CI backends to generate
ci = "github"
# Target platforms
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Don't generate shell installer scripts (user preference)
installers = []
# Create GitHub Release
create-release = true
# Build artifacts for GitHub releases
github-releases = true
